--- a/root/index.html
+++ b/root/index.html
@@ -49,7 +49,7 @@
         <div class="twelve columns">
             <ul class="menu">
                 <li id="menuitems"><a href="#portfoliotarget">PORTFOLIO</a></li>
-                <li id="menuitems"><a href="/documents/resume2017%20copy.pdf" download="MichaelArreguin'sResume">RESUME</a></li>
+                <li id="menuitems"><a href="documents/resume2017%20copy.pdf" download="MichaelArreguin'sResume">RESUME</a></li>
                 <li id="menuitems"><a href="#abouttarget">ABOUT</a></li>
                 <li id="menuitems"><a href="#contacttarget">CONTACT</a></li>
             </ul>
@@ -124,7 +124,7 @@
         </div>
         <div class="eight columns">
             <h2 class="bio">About Michael</h2><!--Bio and temporary filler text-->
-            <p class="bio">Welcome! I am a geospatial professional based in Tuolumne County, California. I enjoy telling stories through cartography, programming, and design. In fact, I’m currently in the process of getting my M.S. in cartography and programming for GIS from University of Wisconsin. Outside of work, you can find me noodling on my bass guitar, hiking, or climbing some rock. If you’d like to know more about my qualifications, feel free to download my resume. Thanks! <a name="resumetarget"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="button button-primary" href="/documents/resume2017%20copy.pdf" download="MichaelArreguin'sResume">resume</a></p>
+            <p class="bio">Welcome! I am a geospatial professional based in Tuolumne County, California. I enjoy telling stories through cartography, programming, and design. In fact, I’m currently in the process of getting my M.S. in cartography and programming for GIS from University of Wisconsin. Outside of work, you can find me noodling on my bass guitar, hiking, or climbing some rock. If you’d like to know more about my qualifications, feel free to download my resume. Thanks! <a name="resumetarget"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="button button-primary" href="documents/resume2017%20copy.pdf" download="MichaelArreguin'sResume">resume</a></p>
         </div>
     </div>
 </div> <!--End of About-->
