updated portfolio tc webmap
updated portfolio tc webmap

--- a/root/index.html
+++ b/root/index.html
@@ -114,7 +114,18 @@
             <h4 class="project_title">Tree Mortality Infographic</h4><!--Project Bio and temporary filler text-->
             <p class="project_desc">In this project, I created a long-form infographic telling the story of tree mortality in California using data from CalFire and the US Department of Agriculture. ArcMap was used to join the data, <a href="http://indiemapper.io/" target="_blank">Indiemapper</a> was used to create the bivariate map, and Illustrator was used to create and style the vector graphics.</p>
         </div>
+    <!-- added new project 2/10 -->
+    </div> 
+      <div class="row" style="margin-bottom: 10%;">
+        <div class="eight columns portfolio" style="float:right;">
+            <a target="_blank" class="image-link" href="http://htmlpreview.github.io/?https://github.com/marreguin1/tc_supervisorial_webmap/blob/master/index.html"><img src="images/supWebMap.jpg" /></a>
+        </div>
+        <div class="four columns">
+            <h4 class="project_title">Supervisorial Web Map</h4><!--Project Bio and temporary filler text-->
+            <p class="project_desc" style="text-align: left; padding-right: 2em;">This project shows supervisor districts within Tuolumne County, CA. The map is interactive by allowing users to hover over different areas to determine what district they are in. First, I created a basemap in Mapbox and uploaded the district geojson files. I then used MapboxGL javascript library to add interactivity to the map.</p>
+        </div>
     </div>
+    <!--end of new project 2/10 -->
 </div> <!-- End Portfolio Container-->
 <a name="abouttarget"></a><!-- green row in tutorial-->   
 <div class="green">
