web map image update
web map image update

--- a/root/index.html
+++ b/root/index.html
@@ -114,18 +114,18 @@
             <h4 class="project_title">Tree Mortality Infographic</h4><!--Project Bio and temporary filler text-->
             <p class="project_desc">In this project, I created a long-form infographic telling the story of tree mortality in California using data from CalFire and the US Department of Agriculture. ArcMap was used to join the data, <a href="http://indiemapper.io/" target="_blank">Indiemapper</a> was used to create the bivariate map, and Illustrator was used to create and style the vector graphics.</p>
         </div>
-    <!-- added new project 2/10 -->
+    <!------------ added new project 2/10 ------------->
     </div> 
       <div class="row" style="margin-bottom: 10%;">
         <div class="eight columns portfolio" style="float:right;">
-            <a target="_blank" class="image-link" href="http://htmlpreview.github.io/?https://github.com/marreguin1/tc_supervisorial_webmap/blob/master/index.html"><img src="images/supWebMap.jpg" /></a>
+            <a target="_blank" class="image-link" href="http://htmlpreview.github.io/?https://github.com/marreguin1/tc_supervisorial_webmap/blob/master/index.html"><img src="root/images/supWebMap.jpg" /></a>
         </div>
         <div class="four columns">
             <h4 class="project_title">Supervisorial Web Map</h4><!--Project Bio and temporary filler text-->
             <p class="project_desc" style="text-align: left; padding-right: 2em;">This project shows supervisor districts within Tuolumne County, CA. The map is interactive by allowing users to hover over different areas to determine what district they are in. First, I created a basemap in Mapbox and uploaded the district geojson files. I then used MapboxGL javascript library to add interactivity to the map.</p>
         </div>
     </div>
-    <!--end of new project 2/10 -->
+    <!----------- end of new project 2/10 ------------->
 </div> <!-- End Portfolio Container-->
 <a name="abouttarget"></a><!-- green row in tutorial-->   
 <div class="green">
@@ -138,7 +138,7 @@
             <p class="bio">Welcome! I am a geospatial professional based in Tuolumne County, California. I enjoy telling stories through cartography, programming, and design. In fact, I’m currently in the process of getting my M.S. in cartography and programming for GIS from University of Wisconsin. Outside of work, you can find me noodling on my bass guitar, hiking, or climbing some rock. If you’d like to know more about my qualifications, feel free to download my resume. Thanks! <a name="resumetarget"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="button button-primary" href="documents/resume2017%20copy.pdf" download="MichaelArreguin'sResume">resume</a></p>
         </div>
     </div>
-</div> <!--End of About-->
+</div> <!--- End of About --->
 <div class="skills">
     <h5 class="skillstext">ARCGIS</h5>
     <div class="skills-container">
