--- a/root/index.html
+++ b/root/index.html
@@ -49,7 +49,7 @@
         <div class="twelve columns">
             <ul class="menu">
                 <li id="menuitems"><a href="#portfoliotarget">PORTFOLIO</a></li>
-                <li id="menuitems"><a href="documents/Resume2018.pdf"> download="MichaelArreguin'sResume">RESUME</a></li>
+                <li id="menuitems"><a href="documents/Resume2018.pdf"> <download="MichaelArreguin'sResume">RESUME</a></li>
                 <li id="menuitems"><a href="#abouttarget">ABOUT</a></li>
                 <li id="menuitems"><a href="#contacttarget">CONTACT</a></li>
             </ul>
