--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div> 
       <div class="row" style="margin-bottom: 10%;">
         <div class="eight columns portfolio" style="float:right;">
-            <a target="_blank" class="image-link" href="http://htmlpreview.github.io/?https://github.com/marreguin1/tc_supervisorial_webmap/blob/master/index.html"><img src="images/supWebMap.jpg" /></a>
+            <a target="_blank" class="image-link" href="http://htmlpreview.github.io/?https://github.com/marreguin1/tc_supervisorial_webmap/blob/master/index.html"><img src="supWebMap.jpg" /></a>
         </div>
         <div class="four columns">
             <h4 class="project_title">Supervisorial Web Map</h4><!--Project Bio and temporary filler text-->
