--- a/575_Lab2/index.html
+++ b/575_Lab2/index.html
@@ -13,7 +13,7 @@
     <script src="https://d3js.org/d3-request.v1.min.js"></script>
     <script src="https://d3js.org/d3-queue.v3.min.js"></script>
     <script src="https://unpkg.com/topojson@3"></script>
-    <link rel="stylesheet" href="marreguin1.github.io/575_Lab2/lib/css/style.css">
+    <link rel="stylesheet" href="575_Lab2/lib/css/style.css">
 
 </head>
 
@@ -21,6 +21,6 @@
 
 </body>
 
-<script src="marreguin1.github.io/575_Lab2/lib/js/main.js"></script>
+<script src="575_Lab2/lib/js/main.js"></script>
 
 </html>
