--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
         <div class="eight columns">
             <h2 class="bio">About Michael</h2><!--Bio and temporary filler text-->
-            <p class="bio">Welcome! I am a geospatial professional based in Northern California. I enjoy telling stories through cartography, programming, and design. In fact, I recently graduated with my M.S. in Web Mapping and Programming for GIS from University of Wisconsin, Madison. Outside of work, you can find me playing my bass guitar, hiking, or bouldering. If you’d like to know more about my experience, feel free to download my resume. Thanks! <a name="resumetarget"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="button button-primary" href="documents/resume2017%20copy.pdf" download="MichaelArreguin'sResume">resume</a></p>
+            <p class="bio">Welcome! I am a geospatial professional based in Northern California. I enjoy telling stories through cartography, programming, and design. In fact, I recently graduated with my M.S. in Web Mapping and Programming for GIS from University of Wisconsin, Madison. Outside of work, you can find me playing my bass guitar, hiking, or bouldering. If you’d like to know more about my experience, feel free to download my resume. Thanks! <a name="resumetarget"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="button button-primary" href="documents/Arreguin_Resume_2020.pdf" download="MichaelArreguin'sResume">resume</a></p>
         </div>
     </div>
 </div> <!--- End of About --->
@@ -174,7 +174,7 @@
 <div class="container-contact">
     <div class="row">
         <div class="twelve columns">
-            <form action="mailto:marreguin@co.tuolumne.ca.us" method="post" enctype="text/plain">
+            <form action="mailto:arreguinconsulting@gmail.com" method="post" enctype="text/plain">
                 <label for="fname">Name</label>
                 <input type="text" id="fname" name="name" placeholder="your first and last name..">
                 
