--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         </div>
 
-        <div class="row" style="margin-bottom: 10%;">
+        <div class="row">
 
             <div class="eight columns portfolio">
                 <a class="image-link" href="images/infograph.png"><img src="images/infographic%20thumbnail.jpg" /></a>
@@ -125,16 +125,10 @@
             <div class="eight columns portfolio" style="float:right;">
                 <a class="image-link" href="images/IcelandEruptions.png"><img src="images/IcelandEruptions.png" /></a>
             </div>
-            <!--<div class="four columns">
-                <h4 class="project_title">Supervisorial Web Map</h4>
-                <!--Project Bio and temporary filler text-->
-            <!--<p class="project_desc" style="text-align: left; padding-right: 2em;">This project shows supervisor districts within Tuolumne County, CA. The map is interactive by allowing users to hover over different areas to determine what district they are in. First, I created a basemap in Mapbox and uploaded the district geojson files. I then used MapboxGL javascript library to add interactivity to the map.</p>
-            </div>-->
 
             <div class="four columns">
                 <h4 class="project_title">Iceland Volcano Eruptions</h4>
-                <!--Project Bio and temporary filler text-->
-                <p class="project_desc" style="text-align: left; padding-right: 2em;">This project shows volcano eruptions in Iceland since the 1700s. The application is a simple demonstration of mapping temporal data. The eruptions are sorted by date. Graduated points were created based on the Volcanic Eruption Index (VEI). VEI measures the severity of each eruption. Data on eruptions in the 1700s can be sparse and often relies on the written accounts of people who were alive during the volcanic event. Users can use the time slider to cycle through eruption events. The points also have interactive popups that give more information such as number of deaths. Mapbox and leaflet were used to create the <a href="https://marreguin1.github.io/IcelandicVolcanoEruptions/">application</a>.</p>
+                <p class="project_desc" style="text-align: left; padding-right: 2em;">This project shows volcano eruptions in Iceland since the 1700s. The application is a simple demonstration of mapping temporal data. The eruptions are sorted by date. Graduated points were created based on the Volcanic Eruption Index (VEI). VEI measures the severity of each eruption. Data on eruptions in the 1700s can be sparse and often relies on the written accounts of people who were alive during the volcanic event. Users can use the time slider to cycle through eruption events. The points also have interactive popups that give more information such as number of deaths. Mapbox and leaflet were used to create the <a href="https://marreguin1.github.io/IcelandicVolcanoEruptions/">application</a></p>
             </div>
         </div>
         <!----------- end of new project 2/10 ------------->
