--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
             <!------------ added new project 2/10 ------------->
         </div>
-        <div class="row" style="margin-bottom: 10%;">
+        <div class="row">
             <div class="eight columns portfolio" style="float:right;">
                 <a class="image-link" href="images/IcelandEruptions.png"><img src="images/IcelandEruptions.png" /></a>
             </div>
@@ -129,6 +129,17 @@
             <div class="four columns">
                 <h4 class="project_title">Iceland Volcano Eruptions</h4>
                 <p class="project_desc" style="text-align: left; padding-right: 2em;">This project shows volcano eruptions in Iceland since the 1700s. The application is a simple demonstration of mapping temporal data. The eruptions are sorted by date. Graduated points were created based on the Volcanic Eruption Index (VEI). VEI measures the severity of each eruption. Data on eruptions in the 1700s can be sparse and often relies on the written accounts of people who were alive during the volcanic event. Users can use the time slider to cycle through eruption events. The points also have interactive popups that give more information such as number of deaths. Mapbox and leaflet were used to create the <a href="https://marreguin1.github.io/IcelandicVolcanoEruptions/">application</a></p>
+            </div>
+        </div>
+        
+        <div class="row" style="margin-bottom: 10%;">
+            <div class="eight columns portfolio">
+                <a class="image-link" href="images/WilliamsonAct.png"><img src="images/WilliamsonAct.png" /></a>
+            </div>
+
+            <div class="four columns">
+                <h4 class="project_title">Williamson Act Preserve Map</h4>
+                <p class="project_desc" style="text-align: left; padding-right: 2em;">This project shows active Williamson Act parcels in Tuolumne County, CA. I used the county cadastral parcels, streets, and water network layers to create this map. The Williamson Act is a California law that provides relief of property tax to owners of farmland and open-space land in exchange for a ten-year agreement that the land will not be developed or otherwise converted to another use. This map was required as an annual deliverable for the County of Tuolumne.</p>
             </div>
         </div>
         <!----------- end of new project 2/10 ------------->
