--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <li id="menuitems"><a href="#portfoliotarget">PORTFOLIO</a></li>
                         <li id="menuitems">
                             
-                            <a href="documents/Arreguin_Resume_2020.pdf" >
+                            <a href="documents/Resume2020.pdf" >
                                 <download="MichaelArreguin'sResume" ><i class="fa fa-download" aria-hidden="true" style="padding-right: 5px"></i>RESUME</a>
                         </li>
                         <li id="menuitems"><a href="#abouttarget">ABOUT</a></li>
@@ -155,7 +155,7 @@
             <div class="eight columns">
                 <h2 class="bio">About Michael</h2>
                 <!--Bio and temporary filler text-->
-                <p class="bio">Hello! I am a geospatial professional based in Northern California. I enjoy telling stories through cartography, programming, and design. I recently graduated with my M.S. in Web Mapping and Programming for GIS from University of Wisconsin, Madison. I have extensive experience working with ESRI products, automating GIS software, data analysis, web mapping, and cartographic design. Outside of work, you can find me playing my bass guitar, hiking, or bouldering. If you’d like to know more about my experience, feel free to download my resume. Thanks! <a name="resumetarget"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="button button-primary" href="documents/Arreguin_Resume_2020.pdf" download="MichaelArreguin'sResume">resume</a></p>
+                <p class="bio">Hello! I am a geospatial professional based in Northern California. I enjoy telling stories through cartography, programming, and design. I recently graduated with my M.S. in Web Mapping and Programming for GIS from University of Wisconsin, Madison. I have extensive experience working with ESRI products, automating GIS software, data analysis, web mapping, and cartographic design. Outside of work, you can find me playing my bass guitar, hiking, or bouldering. If you’d like to know more about my experience, feel free to download my resume. Thanks! <a name="resumetarget"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="button button-primary" href="documents/Resume2020.pdf" download="MichaelArreguin'sResume">resume</a></p>
             </div>
         </div>
     </div>
