update Williamson Act  formatting

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         -->
         
         <div class="row" style="margin-bottom: 10%;">
-            <div class="eight columns portfolio">
+            <div class="eight columns portfolio" style="float:right;">
                 <a class="image-link" href="images/WilliamsonAct.png"><img src="images/WilliamsonAct.png" /></a>
             </div>
 
