update padding on williamson act

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
         -->
         
-        <div class="row" style="margin-bottom: 10%;">
+        <div class="row">
             <div class="eight columns portfolio" style="float:right;">
                 <a class="image-link" href="images/WilliamsonAct.png"><img src="images/WilliamsonAct.png" /></a>
             </div>
